--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "root/swoole_game",
+    "name": "swoole_game/swoole_game",
     "description": "swoole_game 为游戏而生 高性能游戏服务器",
     "authors": [
         {
